<resources>



    <string name="app_name">Food1Phut</string>
    <string name="txt_dang_ki">Đăng Kí</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật Khẩu</string>
    <string name="ten_nhan_vien">Tên Nhân Viên</string>
    <string name="ngay_sinh">Ngày Sinh</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="cccd">Căn cước công dân</string>
    <string name="dang_ki">Đăng kí</string>

    <!--    Đăng Nhập Activity-->
    <string name="ban_chua_co_tai_khoan">Bạn chưa có tài khoản ?</string>
    <string name="dang_ki_ngay">Đăng kí ngay</string>
    
</resources>